<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/name"/>

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/email" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/password"/>

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/password_rewrite_to_confirm"/>

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
