<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:src="@drawable/g_logo"/>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

                <Button
                    android:id="@+id/button_signup"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/BorderlessButton"
                    android:text="@string/signup"
                    android:layout_alignParentBottom="true" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>